delete unused files and modules

--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "readmeFilename": "README.md",
   "gitHead": "af50865813bced47779ebce559d408cb4211c8c3",
   "dependencies":{
-    "iconv": "*",
-    "node-markdown": "*"
+    "iconv": "*"
   }
 }
